Updated by task 'AUTO_TM_MT_1770947331380' Changes for core/source commit https://git.corp.adobe.com/AdobeDocs/experience-platform.en/commit/254892cc8a04e7bfdd181f01e1713328b069dc10

--- a/help/release-notes/2022/june-2022.md
+++ b/help/release-notes/2022/june-2022.md
@@ -2,9 +2,9 @@
 title: Adobe Experience Platform 发行说明（2022 年 6 月）
 description: Adobe Experience Platform 的 2022 年 6 月发行说明。
 exl-id: 44f5ca11-f5c0-4e86-98b2-9564e3a5ca3d
-source-git-commit: bb90bbddf33bc4b0557026a0f34965ac37475c65
+source-git-commit: e150fa51953edbb0e21de962e066deedaf8bd2d7
 workflow-type: tm+mt
-source-wordcount: '1613'
+source-wordcount: '1614'
 ht-degree: 25%
 
 ---
@@ -13,7 +13,7 @@ ht-degree: 25%
 
 **发行日期： 2022年6月22日**
 
-Adobe Experience Platform 中现有功能的更新：
+Adobe Experience Platform 现有功能的更新包括：
 
 - [[!DNL Data Science Workspace]](#dsw)
 - [[!DNL Destinations]](#destinations)
@@ -71,7 +71,7 @@ Adobe Experience Platform 提供一套技术，通过这些技术，可收集客
 | 功能 | 描述 |
 | --- | --- |
 | 数据流的[访问类型配置](../../datastreams/overview.md#create) | 创建新数据流时，您现在可以选择希望Edge Network接受的请求类型： <ul><li>**[!UICONTROL Mixed Authentication]**：选择此选项时，Edge Network将同时接受经过身份验证的请求和未经过身份验证的请求。 当您计划使用Web SDK或[Mobile SDK](https://developer.adobe.com/client-sdks/documentation/)以及[Edge Network API](https://developer.adobe.com/data-collection-apis/docs/getting-started/)时，请选择此选项。 </li><li>**[!UICONTROL Authenticated Only]**：选择此选项时，Edge Network仅接受经过身份验证的请求。 当您计划仅使用Edge Network API并希望阻止[!DNL Edge Network]处理任何未经身份验证的请求时，请选择此选项。 </li></ul> |
-| [在单页应用程序中渲染建议](/help/collection/use-cases/personalization/rendering-personalization-content.md)而不增加指标。 | 新添加的`applyPropositions`命令允许您在不增加[!DNL Target]和[!DNL Analytics]量度的情况下，将[!DNL Target]中的建议数组渲染或执行到单页应用程序中。 这提高了报告准确性。 |
+| [在单页应用程序中渲染建议](/help/collection/js/commands/applypropositions.md)而不增加指标。 | 新添加的`applyPropositions`命令允许您在不增加[!DNL Target]和[!DNL Analytics]量度的情况下，将[!DNL Target]中的建议数组渲染或执行到单页应用程序中。 这一改进提高了报告的准确性。 |
 | [移动到Web和跨域ID共享](/help/collection/use-cases/identity/id-sharing.md) | Adobe Experience Platform Web SDK现在支持访客ID共享功能，使您能够更准确地在移动应用程序和移动Web内容之间以及跨域提供个性化体验。 |
 | [Google数据层标记扩展](../../tags/extensions/client/google-data-layer/overview.md) | Google数据层扩展允许您在标记实施中使用Google数据层。 |
 | [Google Ads增强型转化事件转发扩展](https://partners.adobe.com/exchangeprogram/experiencecloud/exchange.details.108630.html) | Google Ads增强型转化扩展允许您实时增强Google Ads转化。 |
